# practice_biped_robot

./: CMakeLists.txt  package.xml
__bl_biped/: CMakeLists.txt  package.xml
__bl_biped/config/: joint_names___bl_biped.yaml
__bl_biped/launch/: display.launch  gazebo.launch
__bl_biped/meshes/: foot_left.STL  hip_aa_left_side_bl_biped.STL  hip_fe_right_side_bl_biped.STL
__bl_biped/urdf/: __bl_biped.csv  __bl_biped.urdf
launch/: biped_robot_description.launch.py
meshes/: base_link.STL  foot_right.STL  hip_aa_right_side_bl_biped.STL  hip_fe_left_side_bl_biped.STL  lower_leg_left.STL  lower_leg_right.STL  upper_leg_left.STL  upper_leg_right.STL
src/: test.py  train.py
src/logs/tensorboard_standard/PPO_1/: events.out.tfevents.1782067267.konstantin-Vivobook-ASUSLaptop-M6500QC-M6500QC.44548.0
src/logs/tensorboard_standard/PPO_2/: events.out.tfevents.1782068061.konstantin-Vivobook-ASUSLaptop-M6500QC-M6500QC.45063.0
urdf/: __bl_biped.urdf
urdf/mjcf/: bl-biped.xml
